--- a/playground/package.json
+++ b/playground/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@nuxt/fonts": "latest",
+    "@nuxtjs/tailwindcss": "latest",
     "nuxt": "latest",
     "vue": "latest"
   }
