feat: add `local` and `google` providers

--- a/playground/package.json
+++ b/playground/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@nuxt/fonts": "latest",
+    "@nuxtjs/tailwindcss": "latest",
     "nuxt": "latest",
+    "tailwindcss": "^3.4.1",
     "vue": "latest"
   }
 }
