--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "nuxt-module-build",
+    "prepack": "nuxt-module-build build",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
@@ -30,7 +30,14 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.10.2",
-    "fontaine": "^0.4.1"
+    "css-tree": "^2.3.1",
+    "fontaine": "^0.4.1",
+    "globby": "^14.0.1",
+    "magic-string": "^0.30.7",
+    "ofetch": "^1.3.3",
+    "pathe": "^1.1.2",
+    "ufo": "^1.4.0",
+    "unplugin": "^1.7.1"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -38,9 +45,11 @@
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "^3.10.2",
     "@nuxt/test-utils": "^3.11.0",
+    "@types/css-tree": "^2.3.6",
     "@vitest/coverage-v8": "^1.3.0",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
+    "nuxt": "^3.10.2",
     "typescript": "^5.3.3",
     "vitest": "^1.3.0",
     "vue-tsc": "^1.8.27"
