--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
     "nuxt": "^3.10.2",
+    "playwright-core": "^1.41.2",
     "typescript": "^5.3.3",
     "vitest": "^1.3.0",
     "vue-tsc": "^1.8.27"
