test: add more granular tests in suite

--- a/playground/package.json
+++ b/playground/package.json
@@ -13,5 +13,8 @@
     "nuxt": "latest",
     "tailwindcss": "^3.4.1",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "sass": "^1.71.0"
   }
 }
