--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
   "dependencies": {
     "@nuxt/kit": "^3.10.2",
     "css-tree": "^2.3.1",
+    "defu": "^6.1.4",
     "fontaine": "^0.4.1",
     "globby": "^14.0.1",
+    "h3": "^1.10.2",
     "magic-string": "^0.30.7",
     "ofetch": "^1.3.3",
+    "ohash": "^1.1.3",
     "pathe": "^1.1.2",
     "ufo": "^1.4.0",
     "unplugin": "^1.7.1"
@@ -50,6 +53,7 @@
     "@vitest/coverage-v8": "^1.3.0",
     "changelogen": "^0.5.5",
     "eslint": "^8.56.0",
+    "nitropack": "^2.8.1",
     "nuxt": "^3.10.2",
     "playwright-core": "^1.41.2",
     "typescript": "^5.3.3",
