--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fontaine": "^0.4.1",
     "globby": "^14.0.1",
     "h3": "^1.10.2",
+    "jiti": "^1.21.0",
     "magic-string": "^0.30.7",
     "ofetch": "^1.3.3",
     "ohash": "^1.1.3",
