chore: add links to playground

--- a/playground/package.json
+++ b/playground/package.json
@@ -12,7 +12,8 @@
     "@nuxtjs/tailwindcss": "latest",
     "nuxt": "latest",
     "tailwindcss": "^3.4.1",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "devDependencies": {
     "sass": "^1.71.0"
