--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "ohash": "^1.1.3",
     "pathe": "^1.1.2",
     "ufo": "^1.4.0",
-    "unplugin": "^1.7.1"
+    "unplugin": "^1.7.1",
+    "unstorage": "^1.10.1"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
