chore: fix repository format

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@nuxt/fonts",
   "version": "0.0.0",
   "description": "Automatic font configuration for Nuxt apps",
-  "repository": "nuxt/fonts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nuxt/fonts.git"
+  },
   "license": "MIT",
   "type": "module",
   "exports": {
