--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.10.2",
+    "chalk": "^5.3.0",
     "css-tree": "^2.3.1",
     "defu": "^6.1.4",
     "fontaine": "^0.4.1",
