fix(transform): run additional transform step when rendering bundle

--- a/playground/package.json
+++ b/playground/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@nuxt/fonts": "latest",
     "@nuxtjs/tailwindcss": "latest",
+    "@unocss/nuxt": "^0.58.5",
     "nuxt": "latest",
     "tailwindcss": "^3.4.1",
+    "unocss": "^0.58.5",
     "vue": "latest",
     "vue-router": "latest"
   },
