--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
       "require": "./dist/module.cjs"
     },
     "./utils": {
-
+      "types": "./dist/utils.d.mts",
+      "import": "./dist/utils.mjs"
     }
   },
   "main": "./dist/module.cjs",
   "types": "./dist/types.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "utils.d.ts"
   ],
   "scripts": {
     "build": "nuxt-module-build build",
@@ -66,6 +68,7 @@
     "nuxt": "^3.10.3",
     "playwright-core": "^1.41.2",
     "typescript": "^5.3.3",
+    "unbuild": "^2.0.0",
     "vitest": "^1.3.1",
     "vue-tsc": "^1.8.27"
   },
