--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
+    "@nuxt/devtools-kit": "^1.0.8",
+    "@nuxt/devtools-ui-kit": "^1.0.8",
     "@nuxt/kit": "^3.10.3",
     "chalk": "^5.3.0",
     "css-tree": "^2.3.1",
@@ -50,12 +52,12 @@
     "ofetch": "^1.3.3",
     "ohash": "^1.1.3",
     "pathe": "^1.1.2",
+    "sirv": "^2.0.4",
     "ufo": "^1.4.0",
     "unplugin": "^1.7.1",
     "unstorage": "^1.10.1"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "^3.10.3",
