feat: expose font details to client

--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,4 @@
 {
   "name": "nuxt-fonts-devtools",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "generate": "nuxi generate"
-  },
-  "devDependencies": {
-    "@nuxt/kit": "latest"
-  }
+  "private": true
 }
