--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@nuxt/test-utils": "^3.11.0",
     "@types/css-tree": "^2.3.6",
     "@vitest/coverage-v8": "^1.3.1",
+    "birpc": "^0.2.17",
     "changelogen": "^0.5.5",
     "eslint": "^8.57.0",
     "nitropack": "^2.8.1",
