chore: small fixes

--- a/playground/package.json
+++ b/playground/package.json
@@ -8,6 +8,7 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
+    "@nuxt/fonts": "latest",
     "@nuxtjs/tailwindcss": "latest",
     "@unocss/nuxt": "^0.58.5",
     "nuxt": "latest",
