--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "unstorage": "^1.10.1"
   },
   "devDependencies": {
+    "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "^3.10.3",
