--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chalk": "^5.3.0",
     "css-tree": "^2.3.1",
     "defu": "^6.1.4",
+    "esbuild": "^0.20.1",
     "fontaine": "^0.4.1",
     "globby": "^14.0.1",
     "h3": "^1.11.1",
