--- a/package.json
+++ b/package.json
@@ -64,10 +64,13 @@
     "@types/css-tree": "^2.3.6",
     "@vitest/coverage-v8": "^1.3.1",
     "changelogen": "^0.5.5",
+    "consola": "^3.2.3",
     "eslint": "^8.57.0",
+    "execa": "^8.0.1",
     "nitropack": "^2.9.1",
     "nuxt": "^3.10.3",
     "playwright-core": "^1.42.1",
+    "semver": "^7.6.0",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
     "vitest": "^1.3.1",
