--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "globby": "^14.0.1",
     "h3": "^1.11.1",
     "jiti": "^1.21.0",
+    "magic-regexp": "^0.8.0",
     "magic-string": "^0.30.8",
     "ofetch": "^1.3.3",
     "ohash": "^1.1.3",
