--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "semver": "^7.6.0",
     "typescript": "^5.4.2",
     "unbuild": "^2.0.0",
+    "vite": "^5.1.5",
     "vitest": "^1.3.1",
     "vue-tsc": "^2.0.6"
   },
