refactor: enable icons, fix types

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     ".": "./bootstrap.ts"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.31",
     "@nuxt/devtools-kit": "^1.0.8",
     "@nuxt/devtools-ui-kit": "latest",
     "@nuxt/kit": "^3.10.3",
