--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
         run: pnpm playwright-core install chromium
 
       - run: pnpm dev:prepare
+      - run: pnpm test:types
       - run: pnpm lint
       - run: pnpm test -- --coverage
       - run: pnpm build
