--- a/package.json
+++ b/package.json
@@ -26,18 +26,21 @@
     "utils.d.ts"
   ],
   "scripts": {
-    "build": "nuxt-module-build build",
+    "build": "nuxt-module-build build && pnpm client:build",
     "prepack": "pnpm build",
+    "client:build": "nuxi generate client",
+    "client:dev": "nuxi dev client --port 3300",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground && nuxi prepare client",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit && cd ../client && vue-tsc --noEmit",
     "test:watch": "vitest watch"
   },
   "dependencies": {
+    "@nuxt/devtools-kit": "^1.0.8",
     "@nuxt/kit": "^3.10.3",
     "chalk": "^5.3.0",
     "css-tree": "^2.3.1",
@@ -52,6 +55,7 @@
     "ofetch": "^1.3.3",
     "ohash": "^1.1.3",
     "pathe": "^1.1.2",
+    "sirv": "^2.0.4",
     "ufo": "^1.4.0",
     "unplugin": "^1.9.0",
     "unstorage": "^1.10.1"
@@ -64,12 +68,14 @@
     "@nuxt/test-utils": "^3.11.0",
     "@types/css-tree": "^2.3.7",
     "@vitest/coverage-v8": "^1.3.1",
+    "birpc": "^0.2.17",
     "changelogen": "^0.5.5",
     "consola": "^3.2.3",
     "eslint": "^8.57.0",
     "execa": "^8.0.1",
     "nitropack": "^2.9.3",
     "nuxt": "^3.10.3",
+    "nuxt-fonts-devtools": "workspace:^",
     "playwright-core": "^1.42.1",
     "semver": "^7.6.0",
     "typescript": "^5.4.2",
