chore: don't use workspace protocol for devtools bootstrap

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "execa": "^8.0.1",
     "nitropack": "^2.9.3",
     "nuxt": "^3.10.3",
-    "nuxt-fonts-devtools": "workspace:^",
+    "nuxt-fonts-devtools": "latest",
     "playwright-core": "^1.42.1",
     "semver": "^7.6.0",
     "typescript": "^5.4.2",
