--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "unstorage": "^1.10.1"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.31",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/module-builder": "^0.5.5",
