--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "unbuild": "^2.0.0",
     "vite": "^5.1.5",
     "vitest": "^1.3.1",
+    "vue-bundle-renderer": "^2.0.0",
     "vue-tsc": "^2.0.6"
   },
   "resolutions": {
