--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "jiti": "^1.21.0",
     "magic-regexp": "^0.8.0",
     "magic-string": "^0.30.8",
-    "ofetch": "^1.3.3",
+    "node-fetch-native": "^1.6.2",
     "ohash": "^1.1.3",
     "pathe": "^1.1.2",
     "sirv": "^2.0.4",
@@ -74,6 +74,7 @@
     "consola": "^3.2.3",
     "eslint": "^8.57.0",
     "execa": "^8.0.1",
+    "ofetch": "^1.3.3",
     "nitropack": "^2.9.4",
     "nuxt": "^3.11.1",
     "nuxt-fonts-devtools": "latest",
