--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "ofetch": "^1.3.4",
     "nitropack": "^2.9.6",
     "nuxt": "^3.11.2",
-    "nuxt-fonts-devtools": "latest",
+    "nuxt-fonts-devtools": "workspace:*",
     "playwright-core": "^1.43.1",
     "semver": "^7.6.0",
     "typescript": "^5.4.5",
@@ -89,5 +89,6 @@
   },
   "resolutions": {
     "@nuxt/fonts": "workspace:*"
-  }
+  },
+  "packageManager": "pnpm@9.0.1"
 }
