--- a/package.json
+++ b/package.json
@@ -68,18 +68,20 @@
     "@nuxt/schema": "^3.11.2",
     "@nuxt/test-utils": "^3.12.1",
     "@types/css-tree": "^2.3.7",
+    "@types/splitpanes": "^2.2.6",
     "@vitest/coverage-v8": "^1.5.0",
     "birpc": "^0.2.17",
     "changelogen": "^0.5.5",
     "consola": "^3.2.3",
     "eslint": "^9.0.0",
     "execa": "^8.0.1",
-    "ofetch": "^1.3.4",
     "nitropack": "^2.9.6",
     "nuxt": "^3.11.2",
     "nuxt-fonts-devtools": "workspace:*",
+    "ofetch": "^1.3.4",
     "playwright-core": "^1.43.1",
     "semver": "^7.6.0",
+    "shiki": "^1.3.0",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
     "vite": "^5.2.9",
