docs: add docs page

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "prepack": "pnpm build",
     "client:build": "nuxi generate client",
     "client:dev": "nuxi dev client --port 3300",
+    "docs:dev": "nuxi dev docs",
+    "docs:build": "nuxi generate docs",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground && nuxi prepare client",
