--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-ui-pro-template-docs",
+  "name": "nuxt-fonts-docs",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,7 +8,6 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint .",
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
@@ -26,9 +25,7 @@
     "nuxt-og-image": "^2.2.4"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^0.3.9",
     "@nuxthq/studio": "^1.0.13",
-    "eslint": "^9.1.1",
     "vue-tsc": "^2.0.14"
   }
 }
