--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
+    "postinstall": "cd .. && pnpm dev:prepare && cd docs && nuxt prepare",
     "typecheck": "nuxt typecheck"
   },
   "dependencies": {
