--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit && cd ../client && vue-tsc --noEmit",
+    "test:types": "vue-tsc --noEmit && pnpm -r test:types",
     "test:watch": "vitest watch"
   },
   "dependencies": {
