chore: add some explicit dependencies

--- a/docs/package.json
+++ b/docs/package.json
@@ -22,7 +22,9 @@
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
     "nuxt": "^3.12.2",
-    "nuxt-og-image": "^2.2.6"
+    "nuxt-og-image": "^2.2.6",
+    "tailwindcss": "^3.4.4",
+    "vue": "3.4.31"
   },
   "devDependencies": {
     "@nuxthq/studio": "^2.0.2",
