--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "@nuxt/devtools-ui-kit": "latest",
     "@nuxt/kit": "^3.12.2",
     "nuxt": "latest",
-    "vue": "latest",
+    "vue": "3.4.31",
     "vue-router": "latest"
   }
 }
