--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "@nuxt/schema": "^3.12.2",
     "@nuxt/test-utils": "^3.13.1",
     "@types/css-tree": "^2.3.8",
-    "@types/splitpanes": "^2.2.6",
     "@vitest/coverage-v8": "^1.6.0",
     "birpc": "^0.2.17",
     "changelogen": "^0.5.5",
@@ -89,6 +88,7 @@
     "vite": "^5.3.1",
     "vitest": "^1.6.0",
     "vue-bundle-renderer": "^2.1.0",
+    "vue": "3.4.31",
     "vue-tsc": "^2.0.22"
   },
   "resolutions": {
