--- a/playground/package.json
+++ b/playground/package.json
@@ -15,7 +15,7 @@
     "nuxt": "latest",
     "tailwindcss": "^3.4.4",
     "unocss": "^0.61.0",
-    "vue": "latest",
+    "vue": "3.4.31",
     "vue-router": "latest"
   },
   "devDependencies": {
