--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "defu": "^6.1.4",
     "esbuild": "^0.23.0",
     "fontaine": "^0.5.0",
-    "globby": "^14.0.2",
     "h3": "^1.12.0",
     "jiti": "^1.21.6",
     "magic-regexp": "^0.8.0",
@@ -58,6 +57,7 @@
     "ohash": "^1.1.3",
     "pathe": "^1.1.2",
     "sirv": "^2.0.4",
+    "tinyglobby": "^0.2.0",
     "ufo": "^1.5.4",
     "unplugin": "^1.11.0",
     "unstorage": "^1.10.2"
