--- a/package.json
+++ b/package.json
@@ -87,12 +87,17 @@
     "unbuild": "^2.0.0",
     "vite": "^5.4.2",
     "vitest": "^2.0.5",
-    "vue-bundle-renderer": "^2.1.0",
     "vue": "3.4.38",
+    "vue-bundle-renderer": "^2.1.0",
     "vue-tsc": "^2.0.29"
   },
   "resolutions": {
     "@nuxt/fonts": "workspace:*"
   },
-  "packageManager": "pnpm@9.8.0"
+  "packageManager": "pnpm@9.8.0",
+  "pnpm": {
+    "patchedDependencies": {
+      "@nuxt/devtools-ui-kit": "patches/@nuxt__devtools-ui-kit.patch"
+    }
+  }
 }
