--- a/package.json
+++ b/package.json
@@ -70,12 +70,13 @@
     "@nuxt/schema": "^3.13.1",
     "@nuxt/test-utils": "^3.14.2",
     "@types/css-tree": "^2.3.8",
+    "@types/node": "^22.5.5",
+    "@types/semver": "^7.5.8",
     "@vitest/coverage-v8": "^2.1.1",
     "birpc": "^0.2.17",
     "changelogen": "^0.5.7",
     "consola": "^3.2.3",
     "eslint": "^9.10.0",
-    "execa": "^9.4.0",
     "nitropack": "^2.9.7",
     "nuxt": "^3.13.1",
     "nuxt-fonts-devtools": "workspace:*",
