fix: emit `.cjs` version of `@nuxt/fonts/utils`
resolves https://github.com/nuxt/fonts/issues/170

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     },
     "./utils": {
       "types": "./dist/utils.d.mts",
-      "import": "./dist/utils.mjs"
+      "import": "./dist/utils.mjs",
+      "require": "./dist/utils.cjs"
     }
   },
   "main": "./dist/module.cjs",
