--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "sirv": "^2.0.4",
     "tinyglobby": "^0.2.9",
     "ufo": "^1.5.4",
+    "unifont": "^0.1.0",
     "unplugin": "^1.14.1",
     "unstorage": "^1.12.0"
   },
