ci: run test suite on windows

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground && nuxi prepare client",
     "release": "pnpm lint && pnpm test && pnpm prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "test:types": "vue-tsc --noEmit && pnpm -r test:types",
     "test:watch": "vitest watch"
   },
