fix: mark `module.d.mts` as type entrypoint
resolves https://github.com/nuxt/fonts/issues/337

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/types.d.ts",
+      "types": "./dist/module.d.mts",
       "import": "./dist/module.mjs",
       "require": "./dist/module.cjs"
     },
@@ -21,7 +21,7 @@
     }
   },
   "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
+  "types": "./dist/module.d.mts",
   "files": [
     "dist",
     "utils.d.ts"
