chore: upgrade typescript separately

--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "playwright-core": "^1.49.0",
     "semver": "^7.6.3",
     "shiki": "^1.24.0",
-    "typescript": "^5.7.2",
+    "typescript": "^5.6.3",
     "unbuild": "^2.0.0",
     "vite": "^5.4.11",
     "vitest": "^2.1.8",
@@ -95,7 +95,8 @@
     "vue-tsc": "^2.1.10"
   },
   "resolutions": {
-    "@nuxt/fonts": "workspace:*"
+    "@nuxt/fonts": "workspace:*",
+    "typescript": "5.6.3"
   },
   "packageManager": "pnpm@9.14.4",
   "pnpm": {
