--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
   },
   "resolutions": {
     "@nuxt/fonts": "workspace:*",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "unocss": "^0.64.1"
   },
   "packageManager": "pnpm@9.14.4",
   "pnpm": {
