--- a/package.json
+++ b/package.json
@@ -96,6 +96,12 @@
   },
   "resolutions": {
     "@nuxt/fonts": "workspace:*",
+    "@unocss/core": "^0.64.1",
+    "@unocss/nuxt": "^0.64.1",
+    "@unocss/preset-attributify": "^0.64.1",
+    "@unocss/preset-icons": "^0.64.1",
+    "@unocss/preset-mini": "^0.64.1",
+    "@unocss/reset": "^0.64.1",
     "typescript": "5.6.3",
     "unocss": "^0.64.1"
   },
