--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "nuxt": "^3.14.1592",
     "nuxt-fonts-devtools": "workspace:*",
     "ofetch": "^1.4.1",
+    "pkg-pr-new": "^0.0.39",
     "playwright-core": "^1.49.1",
     "semver": "^7.6.3",
     "shiki": "^1.24.2",
