--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,29 @@ on:
 permissions: {}
 
 jobs:
+  release-pr:
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'pull_request' }}
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - run: corepack enable
+      - uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
+        with:
+          node-version: 20
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Prepare build environment
+        run: pnpm dev:prepare
+
+      - run: pnpm build
+
+      - name: publish nightly release
+        if: github.event_name == 'pull_request'
+        run: pnpm pkg-pr-new publish --compact
+
   release:
     runs-on: ubuntu-latest
     if: ${{ github.repository_owner == 'nuxt' && github.event_name == 'push' }}
