refactor!(playgrounds): separate playgrounds of different frameworks

--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "client:dev": "nuxi dev client --port 3300",
     "docs:dev": "nuxi dev docs",
     "docs:build": "nuxi generate docs",
-    "dev": "nuxi dev playground",
+    "dev": "nuxi dev playgrounds/basic",
+    "dev:scss": "nuxi dev playgrounds/scss",
+    "dev:tailwind@3": "nuxi dev playgrounds/tailwindcss@3",
+    "dev:tailwind@4": "nuxi dev playgrounds/tailwindcss@4",
+    "dev:unocss": "nuxi dev playgrounds/unocss",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground && nuxi prepare client",
     "release": "pnpm lint && pnpm test && pnpm prepack && changelogen --release && npm publish && git push --follow-tags",
