--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,8 @@
 packages:
-  - "playground"
+  - "playgrounds/basic"
+  - "playgrounds/scss"
+  - "playgrounds/tailwindcss@3"
+  - "playgrounds/tailwindcss@4"
+  - "playgrounds/unocss"
   - "docs"
   - "client"
