--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "dev:tailwind@3": "nuxi dev playgrounds/tailwindcss@3",
     "dev:tailwind@4": "nuxi dev playgrounds/tailwindcss@4",
     "dev:unocss": "nuxi dev playgrounds/unocss",
-    "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground && nuxi prepare client",
+    "dev:build": "nuxi build playgrounds/basic",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare client && nuxi prepare playgrounds/basic && nuxi prepare playgrounds/scss && nuxi prepare playgrounds/tailwindcss@3 && nuxi prepare playgrounds/tailwindcss@4 && nuxi prepare playgrounds/unocss",
     "release": "pnpm lint && pnpm test && pnpm prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run --coverage",
