test: separate playgrounds for different css frameworks (#470)

--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "client:dev": "nuxi dev client --port 3300",
     "docs:dev": "nuxi dev docs",
     "docs:build": "nuxi generate docs",
-    "dev": "nuxi dev playground",
-    "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground && nuxi prepare client",
+    "dev": "nuxi dev playgrounds/basic",
+    "dev:scss": "nuxi dev playgrounds/scss",
+    "dev:tailwind@3": "nuxi dev playgrounds/tailwindcss@3",
+    "dev:tailwind@4": "nuxi dev playgrounds/tailwindcss@4",
+    "dev:unocss": "nuxi dev playgrounds/unocss",
+    "dev:build": "nuxi build playgrounds/basic",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare client && nuxi prepare playgrounds/basic && nuxi prepare playgrounds/scss && nuxi prepare playgrounds/tailwindcss@3 && nuxi prepare playgrounds/tailwindcss@4 && nuxi prepare playgrounds/unocss",
     "release": "pnpm lint && pnpm test && pnpm prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run --coverage",
