chore: simplify futher

--- a/package.json
+++ b/package.json
@@ -9,14 +9,8 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/module.d.mts",
-      "import": "./dist/module.mjs"
-    },
-    "./utils": {
-      "types": "./dist/utils.d.mts",
-      "import": "./dist/utils.mjs"
-    }
+    ".": "./dist/module.mjs",
+    "./utils": "./dist/utils.mjs"
   },
   "main": "./dist/module.mjs",
   "typesVersions": {
