--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/module.d.mts",
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
-    },
-    "./utils": {
-      "types": "./dist/utils.d.mts",
-      "import": "./dist/utils.mjs",
-      "require": "./dist/utils.cjs"
+    ".": "./dist/module.mjs",
+    "./utils": "./dist/utils.mjs"
+  },
+  "main": "./dist/module.mjs",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/module.d.mts"
+      ],
+      "utils": [
+        "./dist/utils.d.mts"
+      ]
     }
   },
-  "main": "./dist/module.cjs",
-  "types": "./dist/module.d.mts",
   "files": [
-    "dist",
-    "utils.d.ts"
+    "dist"
   ],
   "scripts": {
     "build": "nuxt-module-build build && pnpm client:build",
@@ -72,7 +72,7 @@
     "@iconify-json/carbon": "^1.2.6",
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^1.0.0",
-    "@nuxt/module-builder": "^0.8.4",
+    "@nuxt/module-builder": "^1.0.0-alpha.1",
     "@nuxt/schema": "^3.15.4",
     "@nuxt/test-utils": "^3.15.4",
     "@types/css-tree": "^2.3.10",
