--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/devtools-kit": "^2.3.0",
-    "@nuxt/kit": "^3.16.0",
+    "@nuxt/devtools-kit": "^2.3.2",
+    "@nuxt/kit": "^3.16.2",
     "consola": "^3.4.2",
     "css-tree": "^3.1.0",
     "defu": "^6.1.4",
-    "esbuild": "^0.25.1",
+    "esbuild": "^0.25.2",
     "fontaine": "^0.5.0",
     "h3": "^1.15.1",
     "jiti": "^2.4.2",
@@ -65,34 +65,34 @@
     "tinyglobby": "^0.2.12",
     "ufo": "^1.5.4",
     "unifont": "^0.1.7",
-    "unplugin": "^2.2.1",
+    "unplugin": "^2.2.2",
     "unstorage": "^1.15.0"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.8",
     "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^1.2.0",
+    "@nuxt/eslint-config": "^1.3.0",
     "@nuxt/module-builder": "^1.0.0-alpha.1",
-    "@nuxt/schema": "^3.16.0",
+    "@nuxt/schema": "^3.16.2",
     "@nuxt/test-utils": "^3.17.2",
     "@types/css-tree": "^2.3.10",
-    "@types/node": "^22.13.10",
-    "@types/semver": "^7.5.8",
-    "@vitest/coverage-v8": "^3.0.9",
-    "birpc": "^2.2.0",
+    "@types/node": "^22.13.17",
+    "@types/semver": "^7.7.0",
+    "@vitest/coverage-v8": "^3.1.1",
+    "birpc": "^2.3.0",
     "changelogen": "^0.6.1",
-    "eslint": "^9.22.0",
-    "nitropack": "^2.11.7",
-    "nuxt": "^3.16.0",
+    "eslint": "^9.23.0",
+    "nitropack": "^2.11.8",
+    "nuxt": "^3.16.2",
     "nuxt-fonts-devtools": "workspace:*",
     "ofetch": "^1.4.1",
-    "pkg-pr-new": "^0.0.41",
+    "pkg-pr-new": "^0.0.42",
     "playwright-core": "^1.51.1",
     "semver": "^7.7.1",
     "typescript": "^5.8.2",
     "unbuild": "^3.5.0",
-    "vite": "^6.2.2",
-    "vitest": "^3.0.9",
+    "vite": "^6.2.4",
+    "vitest": "^3.1.1",
     "vue": "3.5.13",
     "vue-bundle-renderer": "^2.1.1",
     "vue-tsc": "^2.2.8"
@@ -108,10 +108,14 @@
     "typescript": "^5.8.2",
     "unocss": "^66.0.0"
   },
-  "packageManager": "pnpm@10.6.5",
+  "packageManager": "pnpm@10.7.1",
   "pnpm": {
-    "patchedDependencies": {
-      "@nuxt/devtools-ui-kit": "patches/@nuxt__devtools-ui-kit.patch"
-    }
+    "ignoredBuiltDependencies": [
+      "esbuild",
+      "vue-demi"
+    ],
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
