--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dev:unocss": "nuxi dev playgrounds/unocss",
     "dev:build": "nuxi build playgrounds/basic",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare client && nuxi prepare playgrounds/basic && nuxi prepare playgrounds/scss && nuxi prepare playgrounds/tailwindcss@3 && nuxi prepare playgrounds/tailwindcss@4 && nuxi prepare playgrounds/unocss",
-    "release": "pnpm lint && pnpm test && pnpm prepack && changelogen --release && npm publish && git push --follow-tags",
+    "release": "echo \"Merge a release PR to main\"",
     "lint": "eslint .",
     "test": "vitest run --coverage",
     "test:types": "vue-tsc --noEmit && pnpm -r test:types",
