--- a/docs/package.json
+++ b/docs/package.json
@@ -15,7 +15,7 @@
     "@iconify-json/ph": "^1.2.2",
     "@iconify-json/simple-icons": "^1.2.30",
     "@nuxt/content": "^2.13.4",
-    "@nuxt/fonts": "^0.11.0",
+    "@nuxt/fonts": "latest",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui-pro": "^1.7.1",
     "@nuxtjs/mdc": "^0.16.1",
