--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@unocss/preset-mini": "^66.0.0",
     "@unocss/reset": "^66.0.0",
     "typescript": "^5.8.3",
+    "vite": "~6.2.6",
     "unocss": "^66.0.0"
   },
   "packageManager": "pnpm@10.9.0",
