--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.8",
     "@nuxt/devtools-kit": "^2.4.0",
-    "@nuxt/devtools-ui-kit": "latest",
+    "@nuxt/devtools-ui-kit": "^2.4.0",
     "@nuxt/kit": "^3.16.2",
     "nuxt": "latest",
     "vue": "3.5.13",
