--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "semver": "^7.7.1",
     "typescript": "^5.8.3",
     "unbuild": "^3.5.0",
-    "vite": "^6.3.2",
+    "vite": "~6.2.6",
     "vitest": "^3.1.2",
     "vue": "3.5.13",
     "vue-bundle-renderer": "^2.1.1",
@@ -112,7 +112,9 @@
   "packageManager": "pnpm@10.9.0",
   "pnpm": {
     "ignoredBuiltDependencies": [
+      "@parcel/watcher",
       "esbuild",
+      "unrs-resolver",
       "vue-demi"
     ],
     "onlyBuiltDependencies": [
