chore: update test snapshots + pin nuxt

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "vue-tsc": "^2.2.10"
   },
   "resolutions": {
+    "nuxt": "3.17.1",
     "@nuxt/fonts": "workspace:*",
     "@unocss/core": "^66.1.0",
     "@unocss/nuxt": "^66.1.0",
