--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "semver": "^7.7.1",
     "typescript": "^5.8.3",
     "unbuild": "^3.5.0",
+    "vite": "~6.2.7",
     "vitest": "^3.1.3",
     "vue": "3.5.13",
     "vue-bundle-renderer": "^2.1.1",
