--- a/package.json
+++ b/package.json
@@ -107,8 +107,7 @@
     "@unocss/preset-mini": "^66.1.0",
     "@unocss/reset": "^66.1.0",
     "typescript": "^5.8.3",
-    "unocss": "^66.1.0",
-    "vite": "~6.2.7"
+    "unocss": "^66.1.0"
   },
   "packageManager": "pnpm@10.10.0",
   "pnpm": {
