--- a/package.json
+++ b/package.json
@@ -91,14 +91,13 @@
     "semver": "^7.7.1",
     "typescript": "^5.8.3",
     "unbuild": "^3.5.0",
-    "vite": "~6.2.7",
+    "vite": "~6.3.5",
     "vitest": "^3.1.3",
     "vue": "3.5.13",
     "vue-bundle-renderer": "^2.1.1",
     "vue-tsc": "^2.2.10"
   },
   "resolutions": {
-    "nuxt": "3.17.1",
     "@nuxt/fonts": "workspace:*",
     "@unocss/core": "^66.1.0",
     "@unocss/nuxt": "^66.1.0",
@@ -106,8 +105,10 @@
     "@unocss/preset-icons": "^66.1.0",
     "@unocss/preset-mini": "^66.1.0",
     "@unocss/reset": "^66.1.0",
+    "nuxt": "3.17.1",
     "typescript": "^5.8.3",
-    "unocss": "^66.1.0"
+    "unocss": "^66.1.0",
+    "vite": "^6.3.5"
   },
   "packageManager": "pnpm@10.10.0",
   "pnpm": {
