refactor: extract core utilities in preparation for `fontless`
Co-authored-by: Damián Pumar <damianpumar@gmail.com>
Co-authored-by: jack shelton <me@jackshelton.com>
Co-authored-by: gioboa <giorgiob.boa@gmail.com>

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
       "vue-demi"
     ],
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "better-sqlite3",
       "sharp"
     ],
