--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
   "scripts": {
     "build": "nuxt-module-build build && pnpm client:build",
     "prepack": "pnpm build",
-    "client:build": "nuxi generate client",
-    "client:dev": "nuxi dev client --port 3300",
-    "docs:dev": "nuxi dev docs",
-    "docs:build": "nuxi generate docs",
-    "dev": "nuxi dev playgrounds/basic",
-    "dev:scss": "nuxi dev playgrounds/scss",
-    "dev:tailwind@3": "nuxi dev playgrounds/tailwindcss@3",
-    "dev:tailwind@4": "nuxi dev playgrounds/tailwindcss@4",
-    "dev:unocss": "nuxi dev playgrounds/unocss",
-    "dev:build": "nuxi build playgrounds/basic",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare client && nuxi prepare playgrounds/basic && nuxi prepare playgrounds/scss && nuxi prepare playgrounds/tailwindcss@3 && nuxi prepare playgrounds/tailwindcss@4 && nuxi prepare playgrounds/unocss",
+    "client:build": "nuxt generate client",
+    "client:dev": "nuxt dev client --port 3300",
+    "docs:dev": "nuxt dev docs",
+    "docs:build": "nuxt generate docs",
+    "dev": "nuxt dev playgrounds/basic",
+    "dev:scss": "nuxt dev playgrounds/scss",
+    "dev:tailwind@3": "nuxt dev playgrounds/tailwindcss@3",
+    "dev:tailwind@4": "nuxt dev playgrounds/tailwindcss@4",
+    "dev:unocss": "nuxt dev playgrounds/unocss",
+    "dev:build": "nuxt build playgrounds/basic",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare client && nuxt prepare playgrounds/basic && nuxt prepare playgrounds/scss && nuxt prepare playgrounds/tailwindcss@3 && nuxt prepare playgrounds/tailwindcss@4 && nuxt prepare playgrounds/unocss",
     "release": "echo \"Merge a release PR to main\"",
     "lint": "eslint .",
     "test": "vitest run --coverage",
