--- a/playgrounds/basic/package.json
+++ b/playgrounds/basic/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@nuxt/fonts": "latest",
-    "@nuxtjs/tailwindcss": "latest",
+    "@nuxtjs/tailwindcss": "6.14.0",
     "nuxt": "latest",
     "tailwindcss": "^3.4.17",
     "vue": "3.5.14",
