chore: update tailwind separately

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,13 @@
   ],
   "packageRules": [
     {
+      "groupName": "tailwind",
+      "matchPackageNames": [
+        "@nuxtjs/tailwindcss",
+        "tailwindcss"
+      ]
+    },
+    {
       "matchPackageNames": [
         "typescript"
       ],
