--- a/.github/workflows/changelogensets.yml
+++ b/.github/workflows/changelogensets.yml
@@ -25,7 +25,7 @@ jobs:
       - run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/*
           cache: "pnpm"
 
       - name: Install dependencies
