--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
   },
   "resolutions": {
     "@nuxt/fonts": "workspace:*",
+    "@types/node": "^22.15.32",
     "@unocss/core": "^66.2.3",
     "@unocss/nuxt": "^66.2.3",
     "@unocss/preset-attributify": "^66.2.3",
