wip: move to docus

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "client:build": "nuxt generate client",
     "client:dev": "nuxt dev client --port 3300",
     "docs:dev": "nuxt dev docs",
-    "docs:build": "nuxt generate docs",
+    "docs:build": "nuxt build docs",
     "dev": "nuxt dev playgrounds/basic",
     "dev:scss": "nuxt dev playgrounds/scss",
     "dev:tailwind@3": "nuxt dev playgrounds/tailwindcss@3",
