--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ coverage
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+.history
 
 # Intellij idea
 *.iml
@@ -56,3 +57,4 @@ coverage
 Network Trash Folder
 Temporary Items
 .apdisk
+
