--- a/playgrounds/tailwindcss@3/package.json
+++ b/playgrounds/tailwindcss@3/package.json
@@ -3,9 +3,9 @@
   "name": "nuxt-fonts-playground",
   "type": "module",
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "generate": "nuxi generate",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
     "test:types": "vue-tsc --noEmit"
   },
   "dependencies": {
