--- a/docs/package.json
+++ b/docs/package.json
@@ -1,34 +1,15 @@
 {
   "name": "nuxt-fonts-docs",
-  "private": true,
-  "type": "module",
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "cd .. && pnpm dev:prepare && cd docs && nuxt prepare",
-    "typecheck": "nuxt typecheck"
+    "build": "nuxt build"
   },
   "dependencies": {
-    "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/ph": "^1.2.2",
-    "@iconify-json/simple-icons": "^1.2.44",
-    "@nuxt/content": "^2.13.4",
-    "@nuxt/fonts": "latest",
-    "@nuxt/image": "^1.10.0",
-    "@nuxt/ui-pro": "^1.8.1",
-    "@nuxtjs/mdc": "^0.17.0",
-    "@vueuse/core": "^13.6.0",
-    "@vueuse/nuxt": "^13.6.0",
-    "nuxt": "^4.0.3",
-    "nuxt-og-image": "^5.1.9",
-    "ohash": "^2.0.11",
-    "tailwindcss": "^3.4.17",
-    "vue": "3.5.18"
-  },
-  "devDependencies": {
-    "@nuxthq/studio": "^2.2.1",
-    "vue-tsc": "^3.0.4"
+    "@nuxt/ui-pro": "^3.3.0",
+    "@nuxtjs/plausible": "1.2.0",
+    "better-sqlite3": "^12.2.0",
+    "docus": "^4.0.4",
+    "nuxt": "^4.0.0",
+    "tailwindcss": "^4.1.11"
   }
 }
