--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "prepack": "pnpm build",
     "client:build": "nuxt generate client",
     "client:dev": "nuxt dev client --port 3300",
-    "docs:dev": "nuxt dev docs",
-    "docs:build": "nuxt build docs",
+    "docs:dev": "cd docs && pnpm dev",
+    "docs:build": "cd docs && pnpm build",
     "dev": "nuxt dev playgrounds/basic",
     "dev:scss": "nuxt dev playgrounds/scss",
     "dev:tailwind@3": "nuxt dev playgrounds/tailwindcss@3",
