--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "./.nuxt/tsconfig.json",
   "exclude": [
     "playgrounds/*",
+    "docs",
     "client",
     "scripts",
     "dist",
