link fonts and rename navigation file

--- a/docs/package.json
+++ b/docs/package.json
@@ -5,6 +5,7 @@
     "build": "nuxt build"
   },
   "dependencies": {
+    "@nuxt/fonts": "link:..",
     "@nuxt/ui-pro": "^3.3.2",
     "@nuxtjs/plausible": "1.2.0",
     "better-sqlite3": "^12.2.0",
