docs: refactor using docus (#679)

--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "prepack": "pnpm build",
     "client:build": "nuxt generate client",
     "client:dev": "nuxt dev client --port 3300",
-    "docs:dev": "nuxt dev docs",
-    "docs:build": "nuxt generate docs",
+    "docs:dev": "cd docs && pnpm dev",
+    "docs:build": "cd docs && pnpm build",
     "dev": "nuxt dev playgrounds/basic",
     "dev:scss": "nuxt dev playgrounds/scss",
     "dev:tailwind@3": "nuxt dev playgrounds/tailwindcss@3",
     "dev:tailwind@4": "nuxt dev playgrounds/tailwindcss@4",
     "dev:unocss": "nuxt dev playgrounds/unocss",
     "dev:build": "nuxt build playgrounds/basic",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare client && nuxt prepare playgrounds/basic && nuxt prepare playgrounds/scss && nuxt prepare playgrounds/tailwindcss@3 && nuxt prepare playgrounds/tailwindcss@4 && nuxt prepare playgrounds/unocss",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare client && nuxt prepare playgrounds/basic && nuxt prepare playgrounds/scss && nuxt prepare playgrounds/tailwindcss@3 && nuxt prepare playgrounds/tailwindcss@4 && nuxt prepare playgrounds/unocss && nuxt prepare docs",
     "release": "echo \"Merge a release PR to main\"",
     "lint": "eslint .",
     "test": "vitest run --coverage",
