--- a/docs/package.json
+++ b/docs/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "@nuxt/fonts": "link:..",
+    "@nuxt/ui": "^4.0.0",
     "@nuxtjs/plausible": "2.0.1",
     "better-sqlite3": "^12.4.1",
-    "docus": "^5.1.0"
+    "docus": "^5.1.0",
+    "tailwindcss": "^4.1.13"
   }
 }
