--- a/docs/package.json
+++ b/docs/package.json
@@ -7,11 +7,10 @@
   },
   "dependencies": {
     "@nuxt/fonts": "link:..",
-    "@nuxt/ui-pro": "^3.3.5",
+    "@nuxt/ui": "^4.0.0",
     "@nuxtjs/plausible": "2.0.1",
     "better-sqlite3": "^12.4.1",
-    "docus": "^4.2.0",
-    "nuxt": "^4.1.2",
+    "docus": "^5.1.0",
     "tailwindcss": "^4.1.13"
   }
 }
