ci: update release workflow to trigger on tags

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: release
 
 on:
-  pull_request_target:
-    types: [closed]
-    branches:
-      - main
+  push:
+    tags:
+      - "v*"
 
 # Remove default permissions of GITHUB_TOKEN for security
 # https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs
@@ -12,7 +11,6 @@ permissions: {}
 
 jobs:
   release:
-    if: github.repository_owner == 'nuxt' && github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'v')
     concurrency:
       group: release
     permissions:
@@ -24,12 +22,10 @@ jobs:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           fetch-depth: 0
-      - uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
+      - run: corepack enable
       - uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version: latest
-          registry-url: "https://registry.npmjs.org/"
-          cache: "pnpm"
 
       - name: 📦 Install dependencies
         run: pnpm install
@@ -37,20 +33,8 @@ jobs:
       - name: Build (stub)
         run: pnpm dev:prepare
 
-      - name: 🛠 Build and release project
-        run: pnpm changelogen --publish
+      - name: 🛠 Build project
+        run: pnpm build
 
-      - name: 🏷️ Create tag
-        env:
-          TAG_NAME: ${{ github.event.pull_request.head.ref }}
-        run: |
-          git tag "$TAG_NAME"
-          git push origin "$TAG_NAME"
-
-      - name: 🛳️ Create GitHub release
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAG_NAME: ${{ github.event.pull_request.head.ref }}
-          RELEASE_NAME: ${{ github.event.pull_request.head.ref }}
-          BODY: ${{ github.event.pull_request.body }}
-        run: gh release create "$TAG_NAME" --title "$RELEASE_NAME" --notes "$BODY"
+      - name: 📦 Release
+        run: pnpm publish --no-git-checks
