fix: fix pnpm publish cannot resolve workspace protocol error

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "eslint": "^9.39.1",
     "nitropack": "^2.12.9",
     "nuxt": "^4.2.0",
-    "nuxt-fonts-devtools": "workspace:*",
+    "nuxt-fonts-devtools": "workspace:client",
     "ofetch": "^1.5.1",
     "pkg-pr-new": "^0.0.60",
     "playwright-core": "^1.56.1",
