--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -13,6 +13,8 @@ permissions:
 
 jobs:
   check-provenance:
-    uses: nuxt/.github/.github/workflows/dependency-review.yml@24a72f836050b01991052633f959d7b343610f73
+    uses: nuxt/.github/.github/workflows/dependency-review.yml@main
     with:
       fail-on-provenance-change: true
+      base-ref: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
+      head-ref: ${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }}
