--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -12,8 +12,8 @@ permissions:
   contents: read
 
 jobs:
-  check-provenance:
-    uses: nuxt/.github/.github/workflows/dependency-review.yml@main
+  dependency-review:
+    uses: nuxt/.github/.github/workflows/dependency-review.yml@5e4467c7ad55361af1e3d430e9a04a9095d541c5
     with:
       fail-on-provenance-change: true
       base-ref: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
