--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "@nuxt/devtools-kit": "^3.1.1",
     "@nuxt/devtools-ui-kit": "^3.1.1",
     "@nuxt/kit": "^4.2.2",
-    "nuxt": "latest",
+    "nuxt": "^4.2.2",
     "vue": "3.5.25",
     "vue-router": "latest"
   }
