--- a/playgrounds/basic/package.json
+++ b/playgrounds/basic/package.json
@@ -6,12 +6,12 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "test:types": "vue-tsc --noEmit"
+    "test:types": "vue-tsc -b --noEmit"
   },
   "dependencies": {
     "@nuxt/fonts": "latest",
     "@nuxtjs/tailwindcss": "6.14.0",
-    "nuxt": "latest",
+    "nuxt": "^4.2.2",
     "tailwindcss": "^3.4.19",
     "vue": "3.5.25",
     "vue-router": "latest"
