--- a/playgrounds/basic/package.json
+++ b/playgrounds/basic/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxt/fonts": "latest",
     "@nuxtjs/tailwindcss": "6.14.0",
+    "cal-sans": "^1.0.1",
     "nuxt": "^4.2.2",
     "tailwindcss": "^3.4.19",
     "vue": "3.5.28",
